manifests/ingress.yml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cucumber.com
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cucumber-app-service
              port:
                number: 80
